--- a/index.html
+++ b/index.html
@@ -5,35 +5,8 @@
     <meta charset="UTF-8">
     <title>Casa Criativa</title>
 
-    <style>
-        body {
-            background: #e5e5e5;
-            color: #25282b;
+    <link rel="stylesheet" href="style.css">
 
-            text-align: center;
-        }
-
-        button {
-            color: #ff5e84;
-            border: none;
-            font-weight: bold;
-            background: none;
-        }
-
-        button.fat {
-            color: white;
-            background: #ff5e84;
-        }
-
-        #footer a {
-            color: #25282b;
-            text-decoration: none;
-        }
-
-        .hide {
-            display: none;
-        }
-    </style>
 </head>
 
 <body>
@@ -58,17 +31,7 @@
 
     <p id="footer">Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a></p>
 
-    <script>
-        document
-            .querySelector("button.fat")
-            .addEventListener("click", function () {
-                document
-                    .querySelector("#footer")
-                    .classList
-                    .toggle("hide")
-            })
-
-    </script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
