refactoring html semantics

--- a/index.html
+++ b/index.html
@@ -10,28 +10,92 @@
 </head>
 
 <body>
-    <img src=" logo.png" alt="Imagem da Logomarca">
+    <div id="container">
+        <section id="intro">
 
-    <p>
-        Ficar em casa em períodos longos, não deve ser nada fácil.
-    </p>
+            <header>
+                <img src=" logo.png" alt="Imagem da Logomarca">
+            </header>
 
-    <p>
-        Por isso, iremos catalogar ideias, <strong>jogos, filmes, livros, cursos, dicas</strong> e tudo que for
-        necessário
-        para tornar esse momento mais interessante.
-    </p>
+            <main>
+                <p>
+                    Ficar em casa em períodos longos, não deve ser nada fácil.
+                </p>
 
-    <p>
-        Comece clicando em ver ideias para ver as ideias cadastradas e contribua adicionando a sua ideia
-    </p>
+                <p>
+                    Por isso, iremos catalogar ideias, <strong>jogos, filmes, livros, cursos, dicas</strong> e tudo que
+                    for
+                    necessário
+                    para tornar esse momento mais interessante.
+                </p>
 
-    <button>+ Adicionar Ideia</button>
-    <button class="fat">Ver Ideias</button>
+                <p>
+                    Comece clicando em ver ideias para ver as ideias cadastradas e contribua adicionando a sua ideia
+                </p>
+            </main>
 
-    <p id="footer">Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a></p>
+            <section id="buttons">
+                <button>+ Adicionar Ideia</button>
+                <button class="fat">Ver Ideias</button>
+            </section>
+
+            <footer>Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a>
+            </footer>
+
+        </section>
+
+        <section id="last-ideias">
+            <div class="idea">
+                <img 
+                src="https://cdn-icons-png.flaticon.com/128/2729/2729007.png" 
+                alt="Imagem de Curso de Programação">
+
+                <div class="content">
+                    <h3>Cursos de Programação</h3>
+                    <p>Estudo</p>
+                    <div class="description">
+                        O mundo está se transformando, então transforme a sua forma de programar o mundo.
+                    </div>
+                    <a href="#">Ir para a Ideia</a>
+                </div>
+            </div>
+
+            <div class="idea">
+                <img 
+                src="https://cdn-icons-png.flaticon.com/128/2729/2729005.png" 
+                alt="Imagem de Exercícios">
+
+                <div class="content">
+                    <h3>Exercícios</h3>
+                    <p>Saúde</p>
+                    <div class="description">
+                        A vida é um movimento. Movimente seu corpo para melhorar a sua mente.
+                    </div>
+                    <a href="#">Ir para a Ideia</a>
+                </div>
+            </div>
+            
+            <div class="idea">
+                <img 
+                src="https://cdn-icons-png.flaticon.com/128/2729/2729027.png" 
+                alt="Imagem de Meditação">
+
+                <div class="content">
+                    <h3>Meditação</h3>
+                    <p>Mentalidade</p>
+                    <div class="description">
+                        Assim como o corpo a mente busca descanso, meditar ajuda a elevar o seu autoconhecimento.
+                    </div>
+                    <a href="#">Ir para a Ideia</a>
+                </div>
+            </div>
+        </section>
+
+    </div>
+
 
     <script src="scripts.js"></script>
+    </div>
 </body>
 
 </html>
