--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <script src="scripts.js"></script>
     </div>
 
-    <div id="modal">
+    <div id="modal" class="hide">
         <div class="content">
             <h1>Nova Ideia</h1>
 
