--- a/ideias.html
+++ b/ideias.html
@@ -12,63 +12,67 @@
 
 </head>
 
-<body>
-    <header>
-        <img src=" logo.png" alt="Imagem da Logomarca">
-        <nav>
-            <li><a href="index.html"></a>Início</li>
-            <li><a href="#">Ideias</a></li>
-            <li><a href="#">Nova Ideia</a></li>
-        </nav>
-    </header>
-    <section id="title"></section>
-    <p>em exibição</p>
-    <h1>Ideias</h1>
-    <main>
-        <section id="ideas">
-            <div class="idea">
-                <img src="https://cdn-icons-png.flaticon.com/128/2729/2729007.png" alt="Imagem de Curso de Programação">
-
-                <div class="content">
-                    <h3>Cursos de Programação</h3>
-                    <p>Estudo</p>
-                    <div class="description">
-                        O mundo está se transformando, então transforme a sua forma de programar o mundo.
-                    </div>
-                    <a href="#">Ir para a Ideia</a>
-                </div>
-            </div>
-
-            <div class="idea">
-                <img src="https://cdn-icons-png.flaticon.com/128/2729/2729005.png" alt="Imagem de Exercícios">
-
-                <div class="content">
-                    <h3>Exercícios</h3>
-                    <p>Saúde</p>
-                    <div class="description">
-                        A vida é um movimento. Movimente seu corpo para melhorar a sua mente.
-                    </div>
-                    <a href="#">Ir para a Ideia</a>
-                </div>
-            </div>
-
-            <div class="idea">
-                <img src="https://cdn-icons-png.flaticon.com/128/2729/2729027.png" alt="Imagem de Meditação">
-
-                <div class="content">
-                    <h3>Meditação</h3>
-                    <p>Mentalidade</p>
-                    <div class="description">
-                        Assim como o corpo a mente busca descanso, meditar ajuda a elevar o seu autoconhecimento.
-                    </div>
-                    <a href="#">Ir para a Ideia</a>
-                </div>
-            </div>
+<body id="page-ideas">
+    <div id="container">
+        <header>
+            <img src=" logo.png" alt="Imagem da Logomarca">
+            <nav>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="#">Ideias</a></li>
+                <li><a href="#">Nova Ideia</a></li>
+            </nav>
+        </header>
+        <section id="title">
+            <p>em exibição</p>
+            <h1>Ideias</h1>
         </section>
-    </main>
-    <footer>
-        Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a>
-    </footer>
+        <main>
+            <section id="ideas">
+                <div class="idea">
+                    <img src="https://cdn-icons-png.flaticon.com/128/2729/2729007.png"
+                        alt="Imagem de Curso de Programação">
+
+                    <div class="content">
+                        <h3>Cursos de Programação</h3>
+                        <p>Estudo</p>
+                        <div class="description">
+                            O mundo está se transformando, então transforme a sua forma de programar o mundo.
+                        </div>
+                        <a href="#">Ir para a Ideia</a>
+                    </div>
+                </div>
+
+                <div class="idea">
+                    <img src="https://cdn-icons-png.flaticon.com/128/2729/2729005.png" alt="Imagem de Exercícios">
+
+                    <div class="content">
+                        <h3>Exercícios</h3>
+                        <p>Saúde</p>
+                        <div class="description">
+                            A vida é um movimento. Movimente seu corpo para melhorar a sua mente.
+                        </div>
+                        <a href="#">Ir para a Ideia</a>
+                    </div>
+                </div>
+
+                <div class="idea">
+                    <img src="https://cdn-icons-png.flaticon.com/128/2729/2729027.png" alt="Imagem de Meditação">
+
+                    <div class="content">
+                        <h3>Meditação</h3>
+                        <p>Mentalidade</p>
+                        <div class="description">
+                            Assim como o corpo a mente busca descanso, meditar ajuda a elevar o seu autoconhecimento.
+                        </div>
+                        <a href="#">Ir para a Ideia</a>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a>
+        </footer>
+    </div>
 
     <div id="modal" class="hide">
         <div class="content">
