--- a/ideias.html
+++ b/ideias.html
@@ -19,7 +19,7 @@
             <nav>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="#">Ideias</a></li>
-                <li><a href="#">Nova Ideia</a></li>
+                <li><a href="#" onclick="onOff()">Nova Ideia</a></li>
             </nav>
         </header>
         <section id="title">
@@ -63,6 +63,19 @@
                         <p>Mentalidade</p>
                         <div class="description">
                             Assim como o corpo a mente busca descanso, meditar ajuda a elevar o seu autoconhecimento.
+                        </div>
+                        <a href="#">Ir para a Ideia</a>
+                    </div>
+                </div>
+
+                <div class="idea">
+                    <img src="https://cdn-icons-png.flaticon.com/128/2729/2729032.png" alt="Imagem de Karaokê">
+
+                    <div class="content">
+                        <h3>Karaokê</h3>
+                        <p>Diversão em Família</p>
+                        <div class="description">
+                            A música transforma a nossa vida, nos faz sonhar, como se estivessemos vivendo uma aventura. Cante!
                         </div>
                         <a href="#">Ir para a Ideia</a>
                     </div>
