--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <section id="intro">
 
             <header>
-                <img src=" logo.png" alt="Imagem da Logomarca">
+                <a href="index.html">
+                    <img src=" logo.png" alt="Imagem da Logomarca">
+                </a>
             </header>
 
             <main>
@@ -38,7 +40,7 @@
 
             <section id="buttons">
                 <button onclick="onOff()">+ Adicionar Ideia</button>
-                <button class="fat">Ver Ideias</button>
+                <a href="ideias.html" class="button">Ver Ideias</a>
             </section>
 
             <footer>Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a>
@@ -126,7 +128,7 @@
             </form>
         </div>
     </div>
-    
+
     <script src="scripts.js"></script>
 </body>
 
