fix: adjusting footer link to open in new window

--- a/ideias.html
+++ b/ideias.html
@@ -23,10 +23,12 @@
                 <li><a class="button" href="#" onclick="onOff()">Nova Ideia</a></li>
             </nav>
         </header>
+
         <section id="title">
             <p>em exibição</p>
             <h1>Ideias</h1>
         </section>
+
         <main>
             <section id="ideas">
                 <div class="idea">
@@ -76,15 +78,17 @@
                         <h3>Karaokê</h3>
                         <p>Diversão em Família</p>
                         <div class="description">
-                            A música transforma a nossa vida, nos faz sonhar, como se estivessemos vivendo uma aventura. Cante!
+                            A música transforma a nossa vida, nos faz sonhar, como se estivessemos vivendo uma aventura.
+                            Cante!
                         </div>
                         <a href="#">Ir para a Ideia</a>
                     </div>
                 </div>
             </section>
         </main>
+
         <footer>
-            Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a>
+            Com 💜 <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
         </footer>
     </div>
 
