--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a href="ideias.html" class="button">Ver Ideias</a>
             </section>
 
-            <footer>Com 💜 <a href="https://rocketseat.com.br">Rocketseat</a>
+            <footer>Com 💜 <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
             </footer>
 
         </section>
