feat: placing the html page on the server

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
             <header>
                 <a href="index.html">
-                    <img src=" logo.png" alt="Imagem da Logomarca">
+                    <img src="/logo.png" alt="Imagem da Logomarca">
                 </a>
             </header>
 
@@ -129,7 +129,7 @@
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 
 </html>
