feat: configuring ideas page on the server

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="intro">
 
             <header>
-                <a href="index.html">
+                <a href="/">
                     <img src="/logo.png" alt="Imagem da Logomarca">
                 </a>
             </header>
@@ -40,7 +40,7 @@
 
             <section id="buttons">
                 <button onclick="onOff()">+ Adicionar Ideia</button>
-                <a href="ideias.html" class="button">Ver Ideias</a>
+                <a href="/ideias" class="button">Ver Ideias</a>
             </section>
 
             <footer>Com 💜 <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a>
