--- a/ideias.html
+++ b/ideias.html
@@ -15,11 +15,11 @@
 <body id="page-ideas">
     <div id="container">
         <header>
-            <a href="index.html">
-                <img src=" logo.png" alt="Imagem da Logomarca">
+            <a href="/">
+                <img src="/logo.png" alt="Imagem da Logomarca">
             </a>
             <nav>
-                <li><a href="index.html">Início</a></li>
+                <li><a href="/">Início</a></li>
                 <li><a class="button" href="#" onclick="onOff()">Nova Ideia</a></li>
             </nav>
         </header>
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="/scripts.js"></script>
 </body>
 
 </html>
